# feedserver

./: .travis.yml  CMakeLists.txt  Dockerfile  README.Rmd  README.html  build_all.sh  build_dependencies.sh  build_feedserver.sh  clean_all.sh  compile_haywire_dependencies.sh  libsnappy_a.sh  test_feedserver.sh
dependencies_fixed/opt_parse/: README  opt.h  program.c
dependencies_fixed/vc_vector/: README.First  vc_vector.h
src/: feedarticle.c  feedarticle.h  feedserver.conf  feedserver.cpp  feedserver.h  json-traverse.c  json-traverse.h  userfeed.c  userfeed.h  vc_string.c  vc_string.h
testing/: build-article-dataframe.R  feed-article-dataframe.R  test-feedarticle.c  test-feedarticle.json  test-feedserver.R  test-feedserver.Rout  test-feedserver.RoutSave  test-feedserver2.R  test-userarticles.json  test-userfeed.c  test-userfeed.json
